[gd_scene load_steps=3 format=3 uid="uid://dqdxoakkrqs61"]

[ext_resource type="Script" path="res://scripts/ui/GameOver.gd" id="1_hrstr"]
[ext_resource type="AudioStream" uid="uid://qe8yxnp4l4m7" path="res://assets/sounds/game_over.mp3" id="2_348qd"]

[node name="GameOver" type="Node"]
script = ExtResource("1_hrstr")

[node name="GameOverLbl" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -184.0
offset_top = 256.0
offset_right = 183.0
offset_bottom = 344.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="DaysLastedLbl" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -22.0
offset_right = 116.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
text = "Your demon lasted [DAYS]
before succumbing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 76.0
offset_right = 96.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
text = "Try Again"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_348qd")
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_retry_button_pressed"]
